<resources>
    <string name="app_name">Explorador de Lugares Turísticos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salir">Salir</string>
    <string name="m_s_informaci_n">Más información</string>
    <string name="configuraci_n">Configuración</string>
    <string name="lugares_tur_sticos">Lugares turísticos</string>
    <string name="mapa">Mapa</string>
    <string name="ingl_s">Inglés</string>
    <string name="espa_ol">Español</string>
    <string name="idioma">Idioma:</string>
    <string name="tipo_de_mapa">Tipo de mapa:</string>
    <string name="terreno">Terreno</string>
    <string name="hbrido">Híbrido</string>
    <string name="satlite">Satélite</string>
    <string name="mapanormal">Mapa normal</string>

</resources>