<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_mapa">

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.softulp.app.exploradordelugarestursticos.ui.mapa.MapsFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_lugaresTuristicos"
        android:name="com.softulp.app.exploradordelugarestursticos.ui.lugaresTuristicos.LugaresTuristicosFragment"
        android:label="@string/lugares_tur_sticos"
        tools:layout="@layout/fragment_lugaresturisticos" >
        <action
            android:id="@+id/action_nav_lugaresTuristicos_to_nav_masInfoFragment"
            app:destination="@id/nav_masInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.softulp.app.exploradordelugarestursticos.ui.configuracion.ConfiguracionFragment"
        android:label="@string/configuraci_n"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.softulp.app.exploradordelugarestursticos.ui.salir.SalirFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_salir" />
    <fragment
        android:id="@+id/nav_masInfoFragment"
        android:name="com.softulp.app.exploradordelugarestursticos.ui.lugaresTuristicos.MasInfoFragment"
        android:label="@string/m_s_informaci_n"
        tools:layout="@layout/fragment_mas_info" >
        <action
            android:id="@+id/action_nav_masInfoFragment_to_nav_lugaresTuristicos"
            app:destination="@id/nav_lugaresTuristicos" />
    </fragment>
</navigation>