<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configuracion.ConfiguracionFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/tvNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mapanormal"
            android:theme="@style/Theme.MyTheme" />

        <TextView
            android:id="@+id/tvSatelite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/satlite"
            android:theme="@style/Theme.MyTheme" />

        <TextView
            android:id="@+id/tvHibrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hbrido"
            android:theme="@style/Theme.MyTheme" />

        <TextView
            android:id="@+id/tvTerreno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terreno"
            android:theme="@style/Theme.MyTheme" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:fontFamily="@font/signika_negative_semibold"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tipo_de_mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:fontFamily="@font/signika_negative_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/idioma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tvIngles"
            android:theme="@style/Theme.MyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingl_s" />

        <TextView
            android:id="@+id/tvEspanol"
            android:theme="@style/Theme.MyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/espa_ol" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>